# funtech-order-app

./: .env.example  .gitignore  LICENCE  Makefile  README.md  alembic.ini  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
deploy/docker/: dev.dockerfile  run.dockerfile
src/api/: dependencies.py  main.py
src/api/routers/: auth.py  orders.py
src/api/schemas/: auth.py  orders.py
src/broker/: consumer.py  producer.py
src/cache/: client.py
src/common/: config.py  constants.py  datetime.py
src/common/shemas/: broker.py  order.py
src/core/: database.py
src/core/enums/: orders.py
src/core/models/: base.py  defaults.py  order.py  user.py
src/core/repository/abc/: base.py
src/core/repository/sqlalchemy/: generic.py  orders.py  user.py
src/core/security/: jwt.py  oauth2.py  passwords.py
src/core/services/: orders.py  processing.py  user.py
src/migrations/: env.py
src/migrations/versions/: 8097216a9a77_make_dates_tz_aware.py  abb389b0dc21_init.py
src/worker/: client.py
src/worker/tasks/: orders.py
